Adding header with styling

--- a/resources/src/asset/style/layout/_base.scss
+++ b/resources/src/asset/style/layout/_base.scss
@@ -3,6 +3,7 @@ html {
   box-sizing: border-box;
   font-family: $fontSecondary;
   background: $colorPrimary;
+  color: $colorBlack;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   -ms-font-feature-settings: 'kern' 1;
