Fix build process to work with laravel login/register flow

--- a/resources/src/asset/style/util/_variable.scss
+++ b/resources/src/asset/style/util/_variable.scss
@@ -25,6 +25,8 @@ $colorSecondary: #304BB1;
 $colorTertiary: #A17C37;
 //$colorQuaternary: #A17C37;
 
+$colorTint: #979797;
+
 
 // $mediaQueries
 @import '../../../data/mediaQueries.json';
