--- a/resources/src/component/MainHeader/MainHeader.scss
+++ b/resources/src/component/MainHeader/MainHeader.scss
@@ -3,6 +3,7 @@
   background: $colorWhite;
   width: 100vw;
   padding: 2.5rem 0;
+  border-bottom: $colorTint 1px solid;
 
   .header {
     display: flex;
