Adding header for sources and  alignment of audioPlayer

--- a/resources/src/asset/style/asset/_button.scss
+++ b/resources/src/asset/style/asset/_button.scss
@@ -15,6 +15,7 @@
   color: $colorWhite;
   background: $colorSecondary;
   border-radius: 13.5px;
+  text-decoration: none;
 }
 
 .secondary-button {
