--- a/resources/src/component/MainFooter/MainFooter.scss
+++ b/resources/src/component/MainFooter/MainFooter.scss
@@ -17,4 +17,47 @@
   .button:first-child  {
     margin-right: 2.5rem;
   }
+
+  .popup {
+    @include size(100vw, 100vh);
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: rgba(0,0,0,0.3);
+  }
+
+  .popup-inner {
+    width: 50vw;
+    height: auto;
+    background: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 2rem;
+    padding: 4rem 2.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    .title {
+      margin-bottom: 2.5rem;
+    }
+
+    .copy {
+      margin-bottom: 6rem;
+    }
+  }
+
+  .button-wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    .button {
+      width: calc(50% - 4rem);
+      text-align: center;
+    }
+  }
 }
