--- a/resources/src/component/MainFooter/MainFooter.scss
+++ b/resources/src/component/MainFooter/MainFooter.scss
@@ -14,7 +14,7 @@
     justify-content: flex-end;
   }
 
-  .button:first-child  {
+  .button:not(:last-child) {
     margin-right: 2.5rem;
   }
 
@@ -59,5 +59,9 @@
       width: calc(50% - 4rem);
       text-align: center;
     }
+  }
+
+  .button-red {
+    background: orangered;
   }
 }
