--- a/resources/src/component/Guide/Guide.scss
+++ b/resources/src/component/Guide/Guide.scss
@@ -9,6 +9,7 @@
   .inner {
     @include size(65vw, 85vh);
     position: absolute;
+    overflow: scroll;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
