Adding more stats to analytics page

--- a/resources/src/page/AnalyticsPage/AnalyticsPage.scss
+++ b/resources/src/page/AnalyticsPage/AnalyticsPage.scss
@@ -10,4 +10,11 @@
     display: flex;
     justify-content: space-between;
   }
+
+  .graph-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
